{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 21,
  "lineage": "5b37adaa-7af5-2e34-effe-464114a626bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:807624821827:instance/i-0c983662a1ba4f89e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c983662a1ba4f89e",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e011b09f74cbbc35",
            "private_dns": "ip-172-31-83-164.ec2.internal",
            "private_ip": "172.31.83.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00ec3c7c087c63682",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-378d9c19",
            "tags": {
              "Name": "dev0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077a0fd3375ee836d"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:807624821827:instance/i-05c66715705d0cdc4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-05c66715705d0cdc4",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-0145cd13ed5c56966",
            "private_dns": "ip-172-31-93-111.ec2.internal",
            "private_ip": "172.31.93.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fd03c7e3a4c16c79",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-378d9c19",
            "tags": {
              "Name": "dev1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077a0fd3375ee836d"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:807624821827:instance/i-01a98271dda604c9e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01a98271dda604c9e",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-08623731dc6ce975d",
            "private_dns": "ip-172-31-85-124.ec2.internal",
            "private_ip": "172.31.85.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b17c222412ebc540",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-378d9c19",
            "tags": {
              "Name": "dev2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077a0fd3375ee836d"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:807624821827:instance/i-0b272e2df29baf6e8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b272e2df29baf6e8",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e4f280cfb9633d4d",
            "private_dns": "ip-172-31-82-49.ec2.internal",
            "private_ip": "172.31.82.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bcdca43b6cf6e52e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-378d9c19",
            "tags": {
              "Name": "dev4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077a0fd3375ee836d"
            ]
          },
          "dependencies": [
            "aws_s3_bucket.dev4",
            "aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev5",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:807624821827:instance/i-05875fe6433be22dd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-05875fe6433be22dd",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b71426f442fec585",
            "private_dns": "ip-172-31-80-118.ec2.internal",
            "private_ip": "172.31.80.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a8ae74a4d3265502",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-378d9c19",
            "tags": {
              "Name": "dev5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077a0fd3375ee836d"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev6",
      "provider": "provider.aws.us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dacb0c129b49f529",
            "arn": "arn:aws:ec2:us-east-2:807624821827:instance/i-073541d4fec3c35b3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-073541d4fec3c35b3",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ca001c2e9edaa38f",
            "private_dns": "ip-172-31-28-3.us-east-2.compute.internal",
            "private_ip": "172.31.28.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06f41048fe5c887ca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4aeeb530",
            "tags": {
              "Name": "dev6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ff3e1cf22cf7a40f"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.dynamodb-homolog",
            "aws_security_group.allow_ssh-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev7",
      "provider": "provider.aws.us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dacb0c129b49f529",
            "arn": "arn:aws:ec2:us-east-2:807624821827:instance/i-05806c1ae67708709",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-05806c1ae67708709",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-03ae3cba84742ed0c",
            "private_dns": "ip-172-31-20-24.us-east-2.compute.internal",
            "private_ip": "172.31.20.24",
            "public_dns": "ec2-18-218-218-5.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.218.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e95219b1cc0b53c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4aeeb530",
            "tags": {
              "Name": "dev7"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ff3e1cf22cf7a40f"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807624821827:security-group/sg-077a0fd3375ee836d",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-077a0fd3375ee836d",
            "ingress": [
              {
                "cidr_blocks": [
                  "179.184.65.86/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "807624821827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-e24e6898"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh-us-east-2",
      "provider": "provider.aws.us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:807624821827:security-group/sg-0ff3e1cf22cf7a40f",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-0ff3e1cf22cf7a40f",
            "ingress": [
              {
                "cidr_blocks": [
                  "179.184.65.86/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "807624821827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-4924e122"
          }
        }
      ]
    }
  ]
}